<resources>
    <string name="app_name">AskWorms</string>
    <string name="slide1_desc">orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="slide1_heading">HEADING</string>
    <string name="next">Nächste</string>
    <string name="willkommen">Willkommen!</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="anderemethode">Benutze eine andere Methoden</string>
    <string name="hallouser">Sie sind genau hier richtig bei Uns!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="student">Student</string>
    <string name="name">Name</string>
    <string name="_000">000</string>
    <string name="aabbccdd12345">AABBCCDD12345</string>
    <string name="password">Password</string>
    <string name="_01629769334">01629769334</string>
    <string name="beispiel_askhsworms_de">beispiel@askhsworms.de</string>
    <string name="email">Email</string>
    <string name="issam_charef">Issam Charef</string>
    <string name="tel_nummer">Tel.Nummer</string>
    <string name="frage">FRAGE</string>
    <string name="antwort">ANTWORT</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="title_dashboard">NOTIZEN</string>
    <string name="title_notifications">FORUM</string>
    <string name="title_activity_forgot_password">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="password_zurueck">Passwort zurücksetzen</string>
    <string name="passwordvergessen">Password vergessen!</string>
    <string name="textpasswordvergessen">Wenn Sie bei uns regestriert sind , schreiben Sie Ihre Email Adresse und dann Sie bekommen eine Email von Uns dann können Sie einfach Ihres Password ändern.</string>
    <string name="o">O</string>
    <string name="k">K</string>
    <string name="sucess_password">Glückwünsch ! Sie haben eine E-mail bekommen!</string>
    <string name="bild_change">Bild Ändern</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragment Notes</string>
    <string name="hello_fragment_forum">Fragment Forum</string>
    <string name="hello_fragment_feed">Fragment Feeds</string>
    <string name="random_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ligula ipsum, tristique eu lectus at, posuere pretium lorem</string>


</resources>