<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTextColor"
    android:padding="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@id/zurick"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/back"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/password_back"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordvergessen"
            android:textSize="40sp"
            android:textColor="@color/hs_farbe"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textSize="150sp"
                android:textColor="@color/hs_farbe_hell"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k"
                android:textSize="150sp"
                android:textColor="@color/sucess"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sucess_password"
            android:textSize="16sp"
            android:textColor="@color/hs_farbe_hell"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"/>





    </LinearLayout>



</ScrollView>