<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTextColor"
    android:padding="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/zurick"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/back"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/password_back"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordvergessen"
            android:textSize="40sp"
            android:textColor="@color/hs_farbe"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textpasswordvergessen"
            android:textSize="16sp"
            android:textColor="@color/hs_farbe_hell"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/parent"
            android:layout_marginTop="30dp"
            android:inputType="textEmailAddress"
            app:startIconDrawable="@drawable/email"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/hs_farbe"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="EMAIL ADRESSE"
                android:textColor="@color/hs_farbe"
                android:textColorHint="@color/hs_farbe"
                style="@style/modifiedEditText"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/hs_farbe_hell"
            android:layout_marginTop="30dp"
            android:text="@string/password_zurueck"
            android:textColor="@color/whiteTextColor"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:ignore="MissingConstraints"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


    </LinearLayout>



</ScrollView>